prevents wrapping of THs in collections, submissions, and users TABLEs

--- a/securedrop/sass/modules/_cols.sass
+++ b/securedrop/sass/modules/_cols.sass
@@ -36,6 +36,7 @@
 
       .designation
         min-width: 35%
+        white-space: nowrap
 
         a
           color: #333
