--- a/securedrop/sass/modules/_submission.sass
+++ b/securedrop/sass/modules/_submission.sass
@@ -10,6 +10,7 @@
 
       &.filename
         min-width: 300px
+        white-space: nowrap
         width: min-content
 
     &:dir(rtl)
