--- a/securedrop/sass/modules/_users-table.sass
+++ b/securedrop/sass/modules/_users-table.sass
@@ -2,6 +2,9 @@
   table#users
     width: 100%
 
+    th
+      white-space: nowrap
+
     th, td
       padding-bottom: .85em
 
